--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
     font-family:sans-serif; font-size: 100px;
 }
 .grid td.clicked {
-    background-color:yellow;
+    background-color:#0f0;
     font-weight:bold; color:red;
 }
 
